--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ html {
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
-body {
+#body {
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -41,7 +41,7 @@ a:hover {
     text-decoration: underline;
 }
 
-.top-banner {
+#top-banner {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -53,11 +53,11 @@ a:hover {
     text-align: center;
 }
 
-.main-section {
+#main-section {
     display: flex;
 }
 
-.left-side-nav {
+#left-side-nav {
     height: 70vh;
     width: 15vw;
     background-color: #6F0765;
@@ -66,11 +66,11 @@ a:hover {
     text-align: center;
 }
 
-.left-side-nav a {
+#left-side-nav a {
     color: #f2f4fb;
 }
 
-.right-side-content {
+#right-side-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -79,57 +79,57 @@ a:hover {
     width: 85vw;
 }
 
-.username {
+#username {
     color: black;
     height: 1.5em;
 }
 
-.password { 
+#password { 
     color: black;
     height: 1.5em;
 }
 
-.sign-in-button button {
+#sign-in-button button {
     color: black;
 }
 
-.sign-in-button {
+#sign-in-button {
     color: black;
     height: 1.5em;
 }
 
-.forgot-email {
+#forgot-email {
     font: "Vidaloka";
     color: royalblue;
 }
 
-.forgot-password {
+#forgot-password {
     font: "Vidaloka";
     color: royalblue;
 }
 
-.about-us-heading {
+#about-us-heading {
     font: Aclonica;
     color: black;
     display: flex;
     align-items: center;
 }
 
-.paragraph-1 {
+#paragraph-1 {
     font: Vidaloka;
     color: black;
 }
 
-.paragraph-2 {
+#paragraph-2 {
     font: Vidaloka;
     color: black;
 }
 
-.paragraph-3 {
+#paragraph-3 {
     font: Vidaloka;
     color: black;
 }
 
-.footer {
+#footer {
     color: black;
 }
