--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ a:hover {
 
 .main-section {
     display: flex;
-    flex-flow: row;
+    flex-flow: row wrap;
 }
 
 .left-side-nav {
@@ -64,6 +64,7 @@ a:hover {
     background-color: #6F0765;
     font-family: "Vidaloka";
     font-size: 1.4em;
+    min-height: 400px;
 }
 
 .left-side-nav a {
@@ -76,7 +77,7 @@ a:hover {
     justify-content: center;
     align-items: center;
     margin: auto;
-    width: 85vw;
+    width: 80vw;
 }
 
 .username {
@@ -116,7 +117,7 @@ a:hover {
 }
 
 .paragraph-1 {
-    font: Vidaloka;
+    font: "Vidaloka";
     color: black;
     font-size: 1.1em;
     margin-left: 0.5em;
@@ -124,7 +125,7 @@ a:hover {
 }
 
 .paragraph-2 {
-    font: Vidaloka;
+    font: "Vidaloka";
     color: black;
     font-size: 1.1em;
     margin-left: 0.5em;
@@ -132,13 +133,24 @@ a:hover {
 }
 
 .paragraph-3 {
-    font: Vidaloka;
+    font: "Vidaloka";
     color: black;
     font-size: 1.1em;
     margin-left: 0.5em;
     margin-right: 5em;
 }
 
+.home-nav {
+    font: "Vidaloka";
+    color: #0900C3;
+}
+
+.home-nav img {
+    border-radius: 20%;
+    max-block-size: 10em;
+}
+
 footer {
     color: black;
+    width: 100%;
 }
